# ziad-del

./: CMakeLists.txt
cmake/sdl2/: FindSDL2.cmake  FindSDL2_image.cmake
include/: draw.h  game.h  logic.h  update.h
src/: draw.c  logic.c  main.c  update.c
